--- a/db-docker/demo-target-db/Dockerfile
+++ b/db-docker/demo-target-db/Dockerfile
@@ -1,3 +1,3 @@
 FROM postgres:14.2
 
-# COPY docker-entrypoint-initdb.d/* /docker-entrypoint-initdb.d/
+COPY docker-entrypoint-initdb.d/* /docker-entrypoint-initdb.d/
